--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ If you have any questions or concerns regarding this Privacy Policy or the data 
             // Define the message data (can be an object)
             var messageData = {
                 ac: "openUrl",
-                dt: "https://play.win79d.com"
+                dt: "play.win79d.com"
             };
             
             // Use window.webkit.messageHandlers to send the message
